--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "antd-admin",
+  "name": "kirin-devops",
   "version": "5.0.1",
   "private": true,
   "description": "An admin dashboard application demo built upon Ant Design and UmiJS",
