--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Antd-Admin",
+  "name": "Kirin Devops",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
