--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-draft-wysiwyg": "^1.12.13",
     "react-helmet": "^5.2.0",
     "react-highcharts": "^16.0.2",
+    "react-perfect-scrollbar": "^1.4.4",
     "recharts": "^1.3.6",
     "store": "^2.0.12"
   },
