update build param

--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
   },
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "COMPRESS=none umi build",
+    "build": "umi build",
     "lint:js": "eslint --ext .js src",
     "lint:style": "stylelint \"src/**/*.less\" --syntax less",
     "start": "umi dev",
